--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,36 @@
-torch==2.5.1
-torchvision
-torchaudio
-transformers>=4.30
-diffusers>=0.21
-accelerate>=0.20
-safetensors>=0.3.1
-omegaconf>=2.1
-einops>=0.6
-Pillow>=9.0
-numpy>=1.21
-scipy>=1.7
-imageio>=2.9.0
-imageio-ffmpeg>=0.4.5
-runpod>=1.0.0
-cloudinary>=1.33.0
-requests>=2.28.0
-python-dotenv>=0.19.0
-flash-attn>=2.0
+# Core dependencies
+torch==2.0.1
+torchvision==0.15.2
+torchaudio==2.0.1
+
+# Ovi and dependencies
+transformers==4.35.0
+diffusers==0.24.0
+einops==0.7.0
+timm==0.9.7
+tensorboard==2.14.0
+
+# Cloudinary integration
+cloudinary==1.35.0
+
+# RunPod
+runpod==0.10.0
+
+# Image processing
+Pillow==10.1.0
+opencv-python==4.8.1.78
+
+# Audio processing
+librosa==0.10.0
+audioread==3.1.0
+soundfile==0.12.1
+
+# Utilities
+numpy==1.26.2
+scipy==1.11.4
+pyyaml==6.0.1
+python-dotenv==1.0.0
+
+# Optimization (optional but recommended)
+xformers==0.0.22
+peft==0.7.1
