--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,39 @@
+# Core PyTorch
 torch==2.1.0
 torchvision==0.16.0
 torchaudio==2.1.0
+
+# ML Frameworks
 transformers==4.36.0
 diffusers==0.25.0
 accelerate==0.25.0
 safetensors==0.4.1
-cloudinary==1.40.0
-runpod==1.6.2
+huggingface-hub==0.20.1
+
+# Ovi-specific dependencies (CRITICAL!)
+omegaconf==2.3.0
+einops==0.7.0
+timm==0.9.12
+tensorboard==2.15.1
+
+# Image/Video processing
 Pillow==10.1.0
 opencv-python-headless==4.8.1.78
+imageio==2.34.0
+imageio-ffmpeg==0.4.10
+
+# Audio processing
 librosa==0.10.1
 soundfile==0.12.1
-numpy==1.24.3
+audioread==3.0.1
 scipy==1.11.4
-huggingface-hub==0.20.1
-einops==0.7.0
+resampy==0.4.2
+
+# API & Cloud
+cloudinary==1.40.0
+runpod==1.6.2
+
+# Utilities
+numpy==1.24.3
 pyyaml==6.0.1
+python-dotenv==1.0.0
