--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ omegaconf==2.3.0
 einops==0.7.0
 timm==0.9.12
 tensorboard==2.15.1
+hydra-core==1.3.2
 
 # Image/Video processing
 Pillow==10.1.0
@@ -37,3 +38,5 @@ runpod==1.6.2
 numpy==1.24.3
 pyyaml==6.0.1
 python-dotenv==1.0.0
+tqdm==4.66.1
+
