--- a/requirements.txt
+++ b/requirements.txt
@@ -10,18 +10,19 @@ accelerate==0.25.0
 safetensors==0.4.1
 huggingface-hub==0.20.1
 
-# Ovi-specific dependencies (CRITICAL!)
+# Ovi-specific dependencies
 omegaconf==2.3.0
 einops==0.7.0
 timm==0.9.12
 tensorboard==2.15.1
 hydra-core==1.3.2
 
-# Image/Video processing
+# Video/Image processing (CRITICAL FOR OVI!)
 Pillow==10.1.0
 opencv-python-headless==4.8.1.78
 imageio==2.34.0
 imageio-ffmpeg==0.4.9
+moviepy==1.0.3
 
 # Audio processing
 librosa==0.10.1
