--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,80 @@
-# Core PyTorch
+# ============================================
+# CORE PYTORCH (CUDA 12.1 Compatible)
+# ============================================
 torch==2.1.0
 torchvision==0.16.0
 torchaudio==2.1.0
 
-# ML Frameworks
+# ============================================
+# TRANSFORMERS & ML FRAMEWORKS
+# ============================================
 transformers==4.36.0
 diffusers==0.25.0
 accelerate==0.25.0
 safetensors==0.4.1
 huggingface-hub==0.20.1
+tokenizers==0.15.0
+sentencepiece==0.1.99
 
-# Ovi-specific dependencies
+# ============================================
+# OVI-SPECIFIC REQUIREMENTS (CRITICAL!)
+# ============================================
 omegaconf==2.3.0
 einops==0.7.0
 timm==0.9.12
 tensorboard==2.15.1
 hydra-core==1.3.2
+antlr4-python3-runtime==4.9.3
 
-# Video/Image processing (CRITICAL FOR OVI!)
-Pillow==10.1.0
-opencv-python-headless==4.8.1.78
+# ============================================
+# VIDEO PROCESSING (moviepy + dependencies)
+# ============================================
+moviepy==1.0.3
 imageio==2.34.0
 imageio-ffmpeg==0.4.9
-moviepy==1.0.3
+Pillow==10.1.0
+opencv-python-headless==4.8.1.78
+decorator==5.1.1
+proglog==0.1.10
 
-# Audio processing
+# ============================================
+# AUDIO PROCESSING
+# ============================================
 librosa==0.10.1
 soundfile==0.12.1
 audioread==3.0.1
 scipy==1.11.4
 resampy==0.4.2
+numba==0.58.0
+llvmlite==0.41.1
+soxr==0.3.7
 
-# API & Cloud
+# ============================================
+# DATA PROCESSING (pandas is REQUIRED!)
+# ============================================
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.2
+
+# ============================================
+# VIDEO ENCODING (PyAV for MP4 output)
+# ============================================
+av==11.0.0
+
+# ============================================
+# API & CLOUD
+# ============================================
 cloudinary==1.40.0
 runpod==1.6.2
 
-# Utilities
-numpy==1.24.3
+# ============================================
+# UTILITIES & HELPERS
+# ============================================
 pyyaml==6.0.1
 python-dotenv==1.0.0
 tqdm==4.66.1
+requests==2.31.0
+regex==2023.12.25
+typing-extensions==4.8.0
+psutil==5.9.6
 
