--- a/requirements.txt
+++ b/requirements.txt
@@ -13,68 +13,48 @@ diffusers==0.25.0
 accelerate==0.25.0
 safetensors==0.4.1
 huggingface-hub==0.20.1
-tokenizers==0.15.0
-sentencepiece==0.1.99
 
 # ============================================
-# OVI-SPECIFIC REQUIREMENTS (CRITICAL!)
+# OVI-SPECIFIC REQUIREMENTS
 # ============================================
 omegaconf==2.3.0
 einops==0.7.0
 timm==0.9.12
 tensorboard==2.15.1
 hydra-core==1.3.2
-antlr4-python3-runtime==4.9.3
 
 # ============================================
-# VIDEO PROCESSING (moviepy + dependencies)
+# VIDEO PROCESSING
 # ============================================
 moviepy==1.0.3
 imageio==2.34.0
 imageio-ffmpeg==0.4.9
 Pillow==10.1.0
 opencv-python-headless==4.8.1.78
-decorator==5.1.1
-proglog==0.1.10
 
 # ============================================
 # AUDIO PROCESSING
 # ============================================
 librosa==0.10.1
 soundfile==0.12.1
-audioread==3.0.1
 scipy==1.11.4
-resampy==0.4.2
 numba==0.58.0
-llvmlite==0.41.1
-soxr==0.3.7
 
 # ============================================
-# DATA PROCESSING (pandas is REQUIRED!)
+# DATA PROCESSING
 # ============================================
 pandas==2.0.3
 numpy==1.24.3
-scikit-learn==1.3.2
-
-# ============================================
-# VIDEO ENCODING (PyAV for MP4 output)
-# ============================================
-av==11.0.0
 
 # ============================================
 # API & CLOUD
 # ============================================
-cloudinary==1.40.0
 runpod==1.6.2
 
 # ============================================
-# UTILITIES & HELPERS
+# UTILITIES
 # ============================================
 pyyaml==6.0.1
-python-dotenv==1.0.0
 tqdm==4.66.1
 requests==2.31.0
-regex==2023.12.25
-typing-extensions==4.8.0
-psutil==5.9.6
 
