Restore Cloudinary dependency in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -47,8 +47,9 @@ pandas==2.0.3
 numpy==1.24.3
 
 # ============================================
-# API & CLOUD
+# API & CLOUD (CLOUDINARY RESTORED!)
 # ============================================
+cloudinary==1.40.0
 runpod==1.6.2
 
 # ============================================
@@ -57,4 +58,3 @@ runpod==1.6.2
 pyyaml==6.0.1
 tqdm==4.66.1
 requests==2.31.0
-
