--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ diffusers==0.25.0
 accelerate==0.25.0
 safetensors==0.4.1
 huggingface-hub==0.20.1
+sentencepiece==0.1.99
+protobuf==3.20.3
 
 # ============================================
 # OVI-SPECIFIC REQUIREMENTS
@@ -31,14 +33,20 @@ imageio==2.34.0
 imageio-ffmpeg==0.4.9
 Pillow==10.1.0
 opencv-python-headless==4.8.1.78
+av==11.0.0
+decorator==5.1.1
 
 # ============================================
-# AUDIO PROCESSING
+# AUDIO PROCESSING (COMPLETE!)
 # ============================================
 librosa==0.10.1
 soundfile==0.12.1
 scipy==1.11.4
 numba==0.58.0
+pydub==0.25.1
+encodec==0.1.1
+audioread==3.0.1
+resampy==0.4.2
 
 # ============================================
 # DATA PROCESSING
@@ -47,7 +55,7 @@ pandas==2.0.3
 numpy==1.24.3
 
 # ============================================
-# API & CLOUD (CLOUDINARY RESTORED!)
+# API & CLOUD
 # ============================================
 cloudinary==1.40.0
 runpod==1.6.2
@@ -58,3 +66,5 @@ runpod==1.6.2
 pyyaml==6.0.1
 tqdm==4.66.1
 requests==2.31.0
+typing-extensions==4.8.0
+fsspec==2023.12.2
