--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,61 @@
 # ============================================
 # CORE PYTORCH (CUDA 12.1 Compatible)
+# Use torch 2.5.1 - stable and compatible with CUDA 12.1
 # ============================================
-torch==2.1.0
-torchvision==0.16.0
-torchaudio==2.1.0
+--extra-index-url https://download.pytorch.org/whl/cu121
+torch==2.5.1+cu121
+torchvision==0.20.1+cu121
+torchaudio==2.5.1+cu121
 
 # ============================================
-# TRANSFORMERS & ML FRAMEWORKS
+# TRANSFORMERS & ML FRAMEWORKS (UPDATED!)
 # ============================================
-transformers==4.36.0
-diffusers==0.25.0
-accelerate==0.25.0
-safetensors==0.4.1
-huggingface-hub==0.20.1
+transformers==4.46.0
+diffusers==0.31.0
+accelerate==0.34.0
+safetensors==0.4.5
+huggingface-hub==0.26.0
 
 # ============================================
 # OVI-SPECIFIC REQUIREMENTS
 # ============================================
 omegaconf==2.3.0
-einops==0.7.0
-timm==0.9.12
-tensorboard==2.15.1
+einops==0.8.0
+timm==1.0.9
+tensorboard==2.18.0
 hydra-core==1.3.2
 
 # ============================================
 # VIDEO PROCESSING
 # ============================================
-imageio==2.34.0
-imageio-ffmpeg==0.4.9
-Pillow==10.1.0
-opencv-python-headless==4.8.1.78
+imageio==2.36.0
+imageio-ffmpeg==0.5.1
+Pillow==11.0.0
+opencv-python-headless==4.10.0.84
 
 # ============================================
 # AUDIO PROCESSING
 # ============================================
-librosa==0.10.1
+librosa==0.10.2
 soundfile==0.12.1
-scipy==1.11.4
-numba==0.58.0
+scipy==1.14.1
 pydub==0.25.1
 
 # ============================================
 # DATA PROCESSING
 # ============================================
-pandas==2.0.3
-numpy==1.24.3
+pandas==2.2.3
+numpy==1.26.4
 
 # ============================================
 # API & CLOUD
 # ============================================
-cloudinary==1.40.0
-runpod==1.6.2
+cloudinary==1.41.0
+runpod==1.7.0
 
 # ============================================
 # UTILITIES
 # ============================================
-pyyaml==6.0.1
-tqdm==4.66.1
-requests==2.31.0
+pyyaml==6.0.2
+tqdm==4.67.0
+requests==2.32.3
