--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # ============================================
 # CORE PYTORCH (CUDA 12.1 Compatible)
-# Use torch 2.5.1 - stable and compatible with CUDA 12.1
 # ============================================
 --extra-index-url https://download.pytorch.org/whl/cu121
 torch==2.5.1+cu121
@@ -8,7 +7,7 @@ torchvision==0.20.1+cu121
 torchaudio==2.5.1+cu121
 
 # ============================================
-# TRANSFORMERS & ML FRAMEWORKS (UPDATED!)
+# TRANSFORMERS & ML FRAMEWORKS
 # ============================================
 transformers==4.46.0
 diffusers==0.31.0
@@ -26,12 +25,14 @@ tensorboard==2.18.0
 hydra-core==1.3.2
 
 # ============================================
-# VIDEO PROCESSING
+# VIDEO PROCESSING (moviepy INCLUDED!)
 # ============================================
+moviepy==1.0.3
 imageio==2.36.0
 imageio-ffmpeg==0.5.1
 Pillow==11.0.0
 opencv-python-headless==4.10.0.84
+decorator==5.1.1
 
 # ============================================
 # AUDIO PROCESSING
@@ -40,6 +41,7 @@ librosa==0.10.2
 soundfile==0.12.1
 scipy==1.14.1
 pydub==0.25.1
+proglog==0.1.10
 
 # ============================================
 # DATA PROCESSING
