--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,66 @@
 # ============================================
-# CORE PYTORCH (CUDA 12.1 Compatible)
+# PYTORCH (CUDA 12.1 - Using 2.3.0 for compatibility)
 # ============================================
 --extra-index-url https://download.pytorch.org/whl/cu121
-torch==2.5.1+cu121
-torchvision==0.20.1+cu121
-torchaudio==2.5.1+cu121
+torch==2.3.0
+torchvision==0.18.0
+torchaudio==2.3.0
 
 # ============================================
-# TRANSFORMERS & ML FRAMEWORKS
+# TRANSFORMERS & DIFFUSERS (Ovi Compatible)
 # ============================================
-transformers==4.46.0
-diffusers==0.31.0
-accelerate==0.34.0
-safetensors==0.4.5
-huggingface-hub==0.26.0
+transformers==4.40.2
+diffusers==0.30.0
+accelerate==0.30.0
+safetensors==0.4.3
+huggingface-hub==0.23.0
 
 # ============================================
-# OVI-SPECIFIC REQUIREMENTS
+# OVI CORE
 # ============================================
 omegaconf==2.3.0
 einops==0.8.0
-timm==1.0.9
-tensorboard==2.18.0
+timm==1.0.3
+tensorboard==2.17.0
 hydra-core==1.3.2
 
 # ============================================
-# VIDEO PROCESSING (moviepy INCLUDED!)
+# VIDEO PROCESSING (COMPLETE)
 # ============================================
 moviepy==1.0.3
-imageio==2.36.0
-imageio-ffmpeg==0.5.1
-Pillow==11.0.0
-opencv-python-headless==4.10.0.84
+imageio==2.34.1
+imageio-ffmpeg==0.4.9
+Pillow==10.3.0
+opencv-python-headless==4.9.0.80
 decorator==5.1.1
-
-# ============================================
-# AUDIO PROCESSING
-# ============================================
-librosa==0.10.2
-soundfile==0.12.1
-scipy==1.14.1
-pydub==0.25.1
 proglog==0.1.10
 
 # ============================================
-# DATA PROCESSING
+# AUDIO PROCESSING (COMPLETE)
 # ============================================
-pandas==2.2.3
+librosa==0.10.2
+soundfile==0.12.1
+scipy==1.13.0
+numba==0.59.1
+pydub==0.25.1
+audioread==3.0.1
+
+# ============================================
+# DATA
+# ============================================
+pandas==2.2.2
 numpy==1.26.4
 
 # ============================================
-# API & CLOUD
+# CLOUD & API
 # ============================================
-cloudinary==1.41.0
-runpod==1.7.0
+cloudinary==1.40.0
+runpod==1.6.2
 
 # ============================================
 # UTILITIES
 # ============================================
-pyyaml==6.0.2
-tqdm==4.67.0
+pyyaml==6.0.1
+tqdm==4.66.4
 requests==2.32.3
+typing-extensions==4.11.0
