--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,51 @@
 # ============================================
-# PYTORCH (CUDA 12.1 - Using 2.3.0 for compatibility)
+# CORE PYTORCH (PROVEN WORKING)
 # ============================================
---extra-index-url https://download.pytorch.org/whl/cu121
-torch==2.3.0
-torchvision==0.18.0
-torchaudio==2.3.0
+torch==2.1.0
+torchvision==0.16.0
+torchaudio==2.1.0
 
 # ============================================
-# TRANSFORMERS & DIFFUSERS (Ovi Compatible)
+# TRANSFORMERS & ML
 # ============================================
-transformers==4.40.2
+transformers==4.36.0
 diffusers==0.30.0
-accelerate==0.30.0
-safetensors==0.4.3
-huggingface-hub==0.23.0
+accelerate==0.25.0
+safetensors==0.4.1
+huggingface-hub==0.20.1
 
 # ============================================
-# OVI CORE
+# OVI REQUIREMENTS
 # ============================================
 omegaconf==2.3.0
-einops==0.8.0
-timm==1.0.3
-tensorboard==2.17.0
+einops==0.7.0
+timm==0.9.12
+tensorboard==2.15.1
 hydra-core==1.3.2
 
 # ============================================
-# VIDEO PROCESSING (COMPLETE)
+# VIDEO PROCESSING
 # ============================================
 moviepy==1.0.3
-imageio==2.34.1
+imageio==2.34.0
 imageio-ffmpeg==0.4.9
-Pillow==10.3.0
-opencv-python-headless==4.9.0.80
-decorator==5.1.1
-proglog==0.1.10
+Pillow==10.1.0
+opencv-python-headless==4.8.1.78
 
 # ============================================
-# AUDIO PROCESSING (COMPLETE)
+# AUDIO PROCESSING
 # ============================================
-librosa==0.10.2
+librosa==0.10.1
 soundfile==0.12.1
-scipy==1.13.0
-numba==0.59.1
+scipy==1.11.4
+numba==0.58.0
 pydub==0.25.1
-audioread==3.0.1
 
 # ============================================
-# DATA
+# DATA PROCESSING
 # ============================================
-pandas==2.2.2
-numpy==1.26.4
+pandas==2.0.3
+numpy==1.24.3
 
 # ============================================
 # CLOUD & API
@@ -61,6 +57,6 @@ runpod==1.6.2
 # UTILITIES
 # ============================================
 pyyaml==6.0.1
-tqdm==4.66.4
-requests==2.32.3
-typing-extensions==4.11.0
+tqdm==4.66.1
+requests==2.31.0
+
