--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,41 @@
 torch==2.6.0
 torchvision==0.21.0
 torchaudio==2.6.0
+
 transformers==4.47.0
 diffusers==0.32.0
 accelerate==1.2.0
 safetensors==0.4.5
 huggingface-hub==0.26.2
+
 omegaconf==2.3.0
 einops==0.8.0
 timm==1.0.11
 tensorboard==2.18.0
 hydra-core==1.3.2
 pyyaml==6.0.2
+
 imageio==2.36.1
 imageio-ffmpeg==0.5.1
 Pillow==11.0.0
 opencv-python-headless==4.10.0.84
+
 librosa==0.10.2
 soundfile==0.12.1
 scipy==1.14.1
 pydub==0.25.1
 moviepy==1.0.3
+
 pandas==2.2.3
 numpy==1.26.4
+
 cloudinary==1.41.0
 runpod==1.7.3
+
 tqdm==4.67.1
 requests==2.32.3
 fsspec==2024.10.0
+
 ftfy==6.3.1
 open_clip_torch==2.24.0
+optimum[quanto]==1.23.3
